src/views/Calendar.scss
@import "../utilities/variables";
$initial_day: 1;
.calendar_container {
    .calendar_main {
        padding: 1rem;
        border-top: 2px solid $divider_color;
        .calendar {
            width: 100%;
            border-radius: 10px;
            margin-top: 1rem;
            outline: 1px solid $main_color;
            overflow: hidden;
            .calendar_month {
                padding: 1rem;
                display: flex;
                align-items: center;
                border-top-left-radius: 10px;
                border-top-right-radius: 10px;
                justify-content: space-between;
                background-color: $main_color;
                color: white;
                .month_left,
                .month_right {
                    cursor: pointer;
                }
                .month_name {
                    text-align: center;
                }
            }
            .calendar_grid {
                .days_names {
                    display: grid;
                    grid-template-columns: repeat(7, 1fr);
                    grid-template-rows: 1fr;
                    gap: 0px 0px;
                    grid-template-areas: ". . . . . . .";
                    .grid_item {
                        padding: 1rem;
                        text-align: center;
                    }
                    .dayoff {
                        background-color: rgb(209, 209, 209);
                    }
                    outline: 1px solid $main_color;
                }
                .days_numbers {
                    display: grid;
                    position: relative;
                    z-index: 0;
                    grid-template-columns: repeat(7, 1fr);
                    grid-template-rows: repeat(1, 1fr);
                    gap: 0px 0px;
                    grid-template-areas:
                        ". . . . . . ."
                        ". . . . . . ."
                        ". . . . . . ."
                        ". . . . . . ."
                        ". . . . . . ."
                        ". . . . . . .";
                    .grid_item_number {
                        position: relative;
                        z-index: 1;
                        padding: 1rem;
                        text-align: center;
                        font-size: 2rem;
                        cursor: pointer;

                        .context_menu {
                            position: absolute;
                            z-index: 2 !important;
                            width: 200px;
                            background-color: rgb(228, 15, 15);
                            padding: 1rem;
                            .context_menu_list {
                                font-size: 1rem;
                                list-style: none;
                            }
                        }
                        &:hover {
                            background-color: $hover_color;
                            color: white;
                        }
                    }
                    @for $initial_day from 1 through 7 {
                        .initial_day_#{$initial_day}:first-child {
                            grid-column: $initial_day;
                        }
                    }

                    .today {
                        outline: 3px solid red;
                        background-color: rgb(196, 235, 248);
                    }

                    .dayoff_number {
                        color: red;
                        font-size: 2rem;
                    }
                }
            }
        }
    }
}

